--- a/view/TeilebestandPanel.form
+++ b/view/TeilebestandPanel.form
@@ -39,7 +39,7 @@
                           </Group>
                           <Component id="lblTeilebestand" min="-2" pref="151" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="47" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
@@ -75,7 +75,7 @@
                   <Component id="btnFilterZurücksetzen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   <Component id="btnFiltern" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="11" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Component id="scpMain" min="-2" pref="470" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
