--- a/view/WarenbewegungFilterFrame.form
+++ b/view/WarenbewegungFilterFrame.form
@@ -49,7 +49,7 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="lblDatumVon" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="txfDatumVon" max="32767" attributes="0"/>
+                                  <Component id="txfDatumVon" min="-2" pref="70" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="lblDatumBis" min="-2" max="-2" attributes="0"/>
@@ -59,7 +59,6 @@
                               <Component id="btnFilterAusführen" alignment="0" max="32767" attributes="0"/>
                               <Component id="scpBewegungstyp" alignment="1" max="32767" attributes="0"/>
                               <Component id="lblBewegungsTyp" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblVerantwortlicher" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="lblFilter" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="cbxQuelleLagertyp" min="-2" max="-2" attributes="0"/>
@@ -81,7 +80,6 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="cbxZielZ" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="txfVerantwrotlicher" alignment="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
@@ -106,11 +104,7 @@
                       <Component id="lblDatumBis" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txfDatumBis" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="lblVerantwortlicher" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="txfVerantwrotlicher" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Component id="lblQuellfach" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -218,11 +212,6 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblVerantwortlicher">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Verantwortlicher:"/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JLabel" name="lblZielfachadresse">
           <Properties>
             <Property name="text" type="java.lang.String" value="Zielfachadresse:"/>
@@ -234,8 +223,6 @@
               <Connection code="new javax.swing.DefaultComboBoxModel()" type="code"/>
             </Property>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="txfVerantwrotlicher">
         </Component>
         <Component class="javax.swing.JButton" name="btnFilterAusf&#xfc;hren">
           <Properties>
